messing around to see if I can fix the spacing

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ img {
 }
 
 a:not(.nothx) {
-    font-size: 16px;
+    font-size: 0px;
     display: inline-block;
     margin-bottom: 8px;
     width: calc(50% - 4px);
